Kubernetes/media/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: jellyseerr
  name: jellyseerr
  namespace: media
spec:
  selector:
    matchLabels:
      io.kompose.service: jellyseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: jellyseerr
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Warsaw
          image: fallenbagel/jellyseerr:2.7.2
          name: jellyseerr
          ports:
            - containerPort: 5055
          volumeMounts:
            - mountPath: /app/config
              name: jellyseerr-data
      restartPolicy: Always
      volumes:
        - name: jellyseerr-data
          persistentVolumeClaim:
            claimName: jellyseerr-data
