Kubernetes/media/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f ./compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
    subdomain: add
    traefik.enable: "true"
    traefik.http.routers.jellyseerr.middlewares: crowdsec,default-headers,auth
  labels:
    io.kompose.service: jellyseerr
  name: jellyseerr
  namespace: media
spec:
  ports:
    - name: "5055"
      port: 5055
      targetPort: 5055
  selector:
    io.kompose.service: jellyseerr
