Kubernetes/media/jellyseerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^add\.(.+)`)
      kind: Rule
      observability:
        accessLogs: true
      services:
        - name: jellyseerr
          port: 5055
